--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -6,6 +6,9 @@
     <div class="mt-1">
       <%= form.text_area :content, rows: "4",
                          class: "shadow-sm text-indigo-400 border-none focus:ring-indigo-200 focus:border-indigo-200 block w-full sm:text-base bg-gray-100 rounded-md",
+                         minlength: Comment::MIN_LENGTH,
+                         maxlength: Comment::MAX_LENGTH,
+                         required: true,
                          placeholder: "Type your comment here",
                          data: { controller: "textarea-autogrow",
                                  "textarea-autogrow-resize-debounce-delay-value": "500",
