README.md updated

--- a/app/views/suggestions/_sidebar_mobile.html.erb
+++ b/app/views/suggestions/_sidebar_mobile.html.erb
@@ -1,5 +1,5 @@
 <!-- sidebar/slideover start -->
-<aside id="sidebar-mobile">
+<aside id="sidebar-mobile" class="sm:hidden">
 
   <!-- overlay starts -->
 
