Remove Stimulus-textarea-autogrow
 - there is a bug on initializing the height of a textarea.
   It can shrink the text area down to about 1 line height.

   It's flaky so removing it and investigate

--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -10,9 +10,7 @@
                          maxlength: Comment::MAX_LENGTH,
                          required: true,
                          placeholder: "Type your comment here",
-                         data: { controller: "textarea-autogrow",
-                                 "textarea-autogrow-resize-debounce-delay-value": "500",
-                                 "countdown-target": "input" }
+                         data: { "countdown-target": "input" }
       %>
     </div>
     <div class="mt-4 flex justify-between">
