Fix: Feedback edit back link centered

--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -1,4 +1,4 @@
-<nav class="flex justify-between items-center m-6">
+<nav class="flex mx-auto px-2 max-w-2xl m-6">
   <div>
     <%= link_to :back, class: "flex items-center" do %>
       <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
