Chg: Feedback#create on success returns to Feedback#show
 - trying to be consistent with the update
 - cancel still returns to index page as you haven't created
   a feedback to #show

--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -1,7 +1,7 @@
 <div class="mx-6 mt-6 md:mx-auto max-w-3xl md:px-10">
   <nav class="flex justify-between items-center">
     <div>
-      <%= link_to :back, class: "flex items-center" do %>
+      <%= link_to retrieve_last_index_page_or_default, class: "flex items-center" do %>
         <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.33447 9L0.334473 5L4.33447 1" stroke="#4661E6" stroke-width="2"/>
         </svg>
