--- a/app/views/roadmaps/index.html.erb
+++ b/app/views/roadmaps/index.html.erb
@@ -1,7 +1,7 @@
 <div class="md:mx-4 md:mt-6 lg:max-w-5xl lg:mx-auto">
   <nav class="flex justify-between items-center text-xs text-bold bg-indigo-400 text-white">
     <div class="flex flex-col ml-6 my-6">
-      <%= link_to :back, class: "flex items-center" do %>
+      <%= link_to root_path, class: "flex items-center" do %>
         <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M4.33447 9L0.334473 5L4.33447 1" stroke="white" stroke-width="2"/>
         </svg>
