--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <%= render "shared/head" %>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 overflow-hidden">
     <%= render "shared/flash" %>
     <%= yield %>
   </body>
