--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@commentable, Comment.new], html: { class: "#{@klass} mt-6 rounded-xl", data: { "reply-target": @reply_target } } do |form|  %>
+<%= form_with model: [@commentable, Comment.new], html: { class: "#{@klass} mt-6 rounded-xl", data: { "toggle-target": @reply_target } } do |form|  %>
   <div class="mt-6 sm:col-span-6"
        data-controller="countdown"
        data-countdown-from-value="250">
