--- a/app/views/feedbacks/_form_inputs.html.erb
+++ b/app/views/feedbacks/_form_inputs.html.erb
@@ -16,7 +16,17 @@
       <p class="text-gray-300">Choose a category for your feedback</p>
     </div>
     <div class="mt-4">
-       <%= form.select(:category, options_for_enum(@feedback, :category), {}, { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+      <% if @feedback.new_record? %>
+        <%= form.select(:category,
+                       options_for_enum(@feedback, :category),
+                       { include_blank: "Please enter a category" },
+                       { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+        <% else %>
+          <%= form.select(:category,
+                       options_for_enum(@feedback, :category),
+                       { },
+                       { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+        <% end %>
       <p class='text-red-200'><%= show_errors(@feedback, :category) %></p>
     </div>
   </div>
@@ -28,7 +38,10 @@
         <p class="text-gray-300">Change feature state</p>
       </div>
       <div class="mt-4">
-        <%= form.select(:status, options_for_enum(@feedback, :status), {}, { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+        <%= form.select(:status,
+                        options_for_enum(@feedback, :status),
+                        {},
+                        { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
         <p class='text-red-200'><%= show_errors(@feedback, :status) %></p>
       </div>
     </div>
