Html set english language

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <%= render "shared/head" %>
   <body class="bg-gray-100 overflow-hidden">
     <%= render "shared/flash" %>
